--- a/css/styles.css
+++ b/css/styles.css
@@ -59,18 +59,23 @@ ul {
 
 /* шапка */
 
-.site {
+/* .page-header {
   align-items: center;
+  border-bottom: 1px solid #ececec;
+} */
+
+.page-header__box {
+  display: flex;
   border-bottom: 1px solid #ececec;
 }
 
-.box {
+.page-header__nav {
   display: flex;
 }
 
 /* логотип */
 
-.logo-link {
+/* .logo-link {
   margin-right: 93px;
 
   font-family: "Raleway", sans-serif;
@@ -80,34 +85,48 @@ ul {
   text-decoration: none;
 
   color: var(--color-logo-primary);
+} */
+
+.logo__link {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  text-decoration: none;
+
+  color: var(--color-logo-primary);
 }
 
-.header-logo {
-  padding-top: 24px;
-}
-
-.container .logo {
+.logo__item {
   color: var(--accent-color);
 }
 
-nav {
+.logo__header {
   display: flex;
+  align-items: center;
+  padding-top: 24px;
+  padding-bottom: 25px;
+  margin-right: 93px;
 }
+
+/* .container .logo {
+  color: var(--accent-color);
+} */
 
 /* навігація сайту */
 
-.site-pagination {
+.site-menu {
   display: flex;
 
   margin-top: 0;
   margin-bottom: 0;
 }
 
-.current {
+.site-menu__current {
   position: relative;
 }
 
-.current::after {
+.site-menu__current::after {
   content: "";
   position: absolute;
   left: 0;
@@ -119,13 +138,13 @@ nav {
   background-color: var(--accent-color);
 }
 
-.site-pagination .link:hover,
-.site-pagination .link:focus {
+.site-menu__link:hover,
+.site-menu__link:focus {
   color: var(--accent-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.site-pagination .link {
+.site-menu__link {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -140,37 +159,37 @@ nav {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.site-pagination .item {
+.site-menu__item {
   margin-right: 50px;
 }
 
-.site-pagination .item:last-child {
+.site-menu__item:last-child {
   margin-right: 0;
 }
 
-.site-pagination .link.current {
+.site-menu__current {
   color: var(--accent-color);
 }
 
-.site-contacts {
+.contacts-header {
   display: flex;
   margin-left: auto;
   gap: 30px;
 }
 
-.site .site-link:hover,
-.site .site-link:focus {
+.contacts-header__link:hover,
+.contacts-header__link:focus {
   color: var(--accent-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.site .site-link:hover .header-contacts-icon,
-.site .site-link:focus .header-contacts-icon {
+.contacts-header__link:hover .header-contacts-icon,
+.contacts-header__link:focus .header-contacts-icon {
   fill: var(--accent-color);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.site .site-link {
+.contacts-header__link {
   display: block;
   display: flex;
   padding-top: 32px;
@@ -188,7 +207,7 @@ nav {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-contacts-icon {
+.contacts-header__icon {
   fill: currentColor;
   margin-right: 10px;
 }
@@ -218,7 +237,7 @@ nav {
   overflow: hidden;
 }
 
-.site-nav {
+.site-filters {
   display: flex;
   margin-bottom: 50px;
   gap: 8px;
@@ -228,8 +247,8 @@ nav {
   cursor: pointer;
 }
 
-.site-nav .site-button:hover,
-.site-nav .site-button:focus {
+.site-filters .site-button:hover,
+.site-filters .site-button:focus {
   background-color: var(--accent-color);
   color: #ffffff;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
@@ -732,13 +751,15 @@ nav {
   gap: 70px;
 }
 
-.contacts .logo-link {
+/* .logo__link {
   text-decoration: none;
   color: #ffffff;
-}
+} */
 
-.footer-logo {
+.logo__footer {
   display: inline-block;
+  text-decoration: none;
+  color: #ffffff;
   margin-right: 0px;
   margin-bottom: 20px;
 }
