--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,3 +1,27 @@
+.promo__button {
+  min-width: 216px;
+  height: 50px;
+  border-radius: 4px;
+
+  font-family: "Roboto";
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+
+  background-color: var(--accent-color);
+  color: var(--color-text-promo);
+  border-color: transparent;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+}
+
+.promo__button:hover,
+.promo__button:focus {
+  background-color: #188ceb;
+  color: var(--color-text-promo);
+}
+
 .footer-button__btn {
   font-family: "Roboto";
   font-weight: 700;
