--- a/sass/components/_portfolio-main.scss
+++ b/sass/components/_portfolio-main.scss
@@ -26,3 +26,100 @@
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+/*card-set*/
+
+.card-set__wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
+.card-set__aside {
+  display: block;
+  width: calc((100% - 60px) / 3);
+}
+
+.card-set__link:hover,
+.card-set__link:focus {
+  display: block;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.card-set__box {
+  display: flex;
+  position: relative;
+  overflow: hidden;
+}
+
+.card-set__box::before {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+
+  transform: translateY(101%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  background-color: rgba(33, 150, 243, 0.9);
+}
+
+.card-set__link:hover .card-set__box::before {
+  transform: translateY(0);
+}
+
+.card-set__link:hover .card-set__thumb {
+  transform: translateY(0);
+}
+
+.card-set__thumb {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.card-set__desc {
+  font-family: "Roboto" sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.56;
+  padding: 63px 24px;
+
+  letter-spacing: 0.03em;
+
+  color: #ffffff;
+}
+
+.card-set__wrap {
+  padding: 20px 24px;
+
+  border: 1px solid #eeeeee;
+  border-top: none;
+}
+
+.card-set__link {
+  text-decoration: none;
+}
+
+.card-set__title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  margin-bottom: 4px;
+  color: var(--primary-color-title);
+}
+
+.card-set__text {
+  font-size: 16px;
+  line-height: 1.88;
+  color: var(--primary-color-text);
+}
