--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,10 @@
 @import "./utils/variables.scss";
+@import "./components/page-header";
+@import "./components/site-menu";
+@import "./components/logo";
+@import "./components/contacts";
+@import "./components/button";
+@import "./components/studio-main";
+@import "./components/portfolio-main";
+@import "./components/peage-footer";
+@import "./components/modal";
