--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -10,3 +10,5 @@ $color-text-promo: #ffffff;
 $color-link-contacts: rgba(255, 255, 255, 0.6);
 $primary-color-socials-clients: #afb1b8;
 $socials-secondary-color: #ffffff;
+$footer-primary-text-color: #ffffff;
+$buttom-secondary-color: #188ce8;
