--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -51,7 +51,7 @@
 
 .modal-btn:hover,
 .modal-btn:focus {
-  fill: var(--accent-color);
+  fill: var($accent-color);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -80,7 +80,7 @@
   letter-spacing: 0.03em;
   text-align: center;
 
-  color: var(--primary-color-title);
+  color: var($primary-color-title);
 }
 
 .modal-group-form {
@@ -102,7 +102,7 @@
 
   letter-spacing: 0.01em;
 
-  color: var(--primary-color-text);
+  color: var($primary-color-text);
 }
 
 .form-field input {
@@ -127,14 +127,14 @@
 
 .form-input:hover,
 .form-input:focus {
-  border: 1px solid var(--accent-color);
+  border: 1px solid var($accent-color);
   outline: none;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-input:hover ~ .form-icon,
 .form-input:focus ~ .form-icon {
-  fill: var(--accent-color);
+  fill: var($accent-color);
 
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -162,7 +162,7 @@
 
 .form-comment:hover,
 .form-comment:focus {
-  border: 1px solid var(--accent-color);
+  border: 1px solid var($accent-color);
   outline: none;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -187,8 +187,8 @@
 }
 
 .checkbox-input:checked + .checkbox-icon {
-  border-color: var(--accent-color);
-  background-color: var(--accent-color);
+  border-color: var($accent-color);
+  background-color: var($accent-color);
   background-image: url(../images/icon\ check.svg);
   background-size: contain;
   background-origin: border-box;
@@ -200,7 +200,7 @@
 }
 
 .modal-form-link {
-  color: var(--accent-color);
+  color: var($accent-color);
 }
 
 .checkbox-icon {
@@ -231,7 +231,7 @@
   letter-spacing: 0.06em;
 
   color: #ffffff;
-  background-color: var(--accent-color);
+  background-color: var($accent-color);
 
   border-radius: 4px;
   border-color: transparent;
@@ -242,7 +242,7 @@
 
 .modal-form-btn:hover,
 .modal-form-btn:focus {
-  background-color: #188ce8;
+  background-color: var($buttom-secondary-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
