--- a/sass/components/_portfolio-main.scss
+++ b/sass/components/_portfolio-main.scss
@@ -9,7 +9,7 @@
   gap: 8px;
   justify-content: center;
 
-  color: var(--color-nav);
+  color: var($color-nav);
   cursor: pointer;
 }
 
@@ -27,7 +27,35 @@
   overflow: hidden;
 }
 
-/*card-set*/
+.site-filters__button:hover,
+.site-filters__button:focus {
+  background-color: var($accent-color);
+  color: #ffffff;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+  cursor: pointer;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.site-filters__button {
+  text-align: center;
+  align-items: center;
+  padding: 6px 22px;
+  height: 38px;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.63;
+  font-family: inherit;
+  background-color: #f5f4f4;
+  color: var($color-nav);
+  border-color: transparent;
+  border: none;
+  border-radius: 4px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .card-set__wrapper {
   display: flex;
@@ -115,11 +143,11 @@
   line-height: 2;
   letter-spacing: 0.06em;
   margin-bottom: 4px;
-  color: var(--primary-color-title);
+  color: var($primary-color-title);
 }
 
 .card-set__text {
   font-size: 16px;
   line-height: 1.88;
-  color: var(--primary-color-text);
+  color: var($primary-color-text);
 }
