--- a/sass/components/_site-menu.scss
+++ b/sass/components/_site-menu.scss
@@ -5,11 +5,11 @@
   margin-bottom: 0;
 }
 
-.site-menu__current {
+.site-menu--current {
   position: relative;
 }
 
-.site-menu__current::after {
+.site-menu--current::after {
   content: "";
   position: absolute;
   left: 0;
@@ -18,12 +18,12 @@
   width: 100%;
   height: 4px;
   border-radius: 2px;
-  background-color: var(--accent-color);
+  background-color: var($accent-color);
 }
 
 .site-menu__link:hover,
 .site-menu__link:focus {
-  color: var(--accent-color);
+  color: var($accent-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -38,7 +38,7 @@
   line-height: 1.14;
   letter-spacing: 0.02em;
 
-  color: var(--color-nav);
+  color: var($color-nav);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -50,6 +50,6 @@
   margin-right: 0;
 }
 
-.site-menu__current {
-  color: var(--accent-color);
+.site-menu--current {
+  color: var($accent-color);
 }
