--- a/sass/components/_studio-main.scss
+++ b/sass/components/_studio-main.scss
@@ -3,7 +3,7 @@
   padding-bottom: 200px;
   margin: 0 auto;
 
-  background-color: var(--color-bg-promo-footer);
+  background-color: var($color-bg-promo-footer);
   background-image: url(../images/promo-bg.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -20,7 +20,6 @@
   margin-bottom: 30px;
   max-width: 696px;
   text-align: center;
-  /* padding-top: 200px; */
   margin-right: auto;
   margin-left: auto;
 
@@ -52,8 +51,8 @@
   width: 270px;
   height: 120px;
 
-  background-color: var(--color-bg-hero);
-  border: 1px solid var(--color-bg-hero);
+  background-color: var($color-bg-hero);
+  border: 1px solid var($color-bg-hero);
   border-radius: 4px;
 
   display: flex;
@@ -74,7 +73,7 @@
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
-  color: var(--primary-color-title);
+  color: var($primary-color-title);
 }
 
 .features__text {
@@ -113,7 +112,7 @@
   line-height: 1.17;
   text-align: center;
 
-  color: var(--primary-color-title);
+  color: var($primary-color-title);
 }
 
 .galery__box {
@@ -141,7 +140,7 @@
 
 .hero__wrapper {
   padding: 94px 0;
-  background-color: var(--color-bg-hero);
+  background-color: var($color-bg-hero);
 }
 
 .hero__title {
@@ -157,8 +156,6 @@
 .hero__box {
   display: flex;
   gap: 30px;
-  /* flex-basis: calc((100% - 90px) / 4); */
-  /* flex-basis: calc(100% / 4 - 90px); */
 }
 
 .hero-meta__wrap {
@@ -172,7 +169,7 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 
-  background-color: var(--primary-color-bacground);
+  background-color: var($primary-color-bacground);
 }
 
 .hero-meta__icon {
@@ -186,7 +183,7 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
-  color: var(--primary-color-title);
+  color: var($primary-color-title);
 }
 
 .hero-meta__text {
@@ -196,8 +193,6 @@
   font-size: 16px;
   line-height: 1.19;
 }
-
-/* герої соц-мережі */
 
 .socials__box {
   display: flex;
@@ -212,31 +207,28 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
-  /* fill: var(--primary-socials-clients-color); */
-  /* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .socials__link:hover,
 .socials__link:focus {
-  background-color: var(--accent-color);
+  background-color: var($accent-color);
   border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .socials__link:hover .socials__icon,
 .socials__link:focus .socials__icon {
-  fill: var(--secondary-color-socials);
+  fill: var($secondary-color-socials);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .socials__icon {
-  fill: var(--primary-color-socials-clients);
+  fill: var($primary-color-socials-clients);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients__wrapper {
-  border-color: var(--primary-color-bacground);
+  border-color: var($primary-color-bacground);
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -248,15 +240,11 @@
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
-  color: var(--primary-color-title);
+  color: var($primary-color-title);
 }
 
 .clients__box {
   display: flex;
-
-  /* формули не працьують чомусь */
-  /* flex-basis: calc(100% / 6 - 150px);
-  flex-basis: calc((100% - 150px) / 6); */
 
   gap: 30px;
   justify-content: center;
@@ -265,7 +253,7 @@
 
 .clients__meta:hover,
 .clients__meta:focus {
-  border-color: var(--accent-color);
+  border-color: var($accent-color);
 }
 
 .clients__link {
@@ -283,21 +271,20 @@
 
 .clients__link:hover,
 .clients__link:focus {
-  border-color: var(--accent-color);
-  /* fill: var(--accent-color); */
+  border-color: var($accent-color);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients__icon {
-  border-color: var(--accent-color);
+  border-color: var($accent-color);
   width: 106px;
   height: 60px;
-  fill: var(--primary-color-socials-clients);
+  fill: var($primary-color-socials-clients);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients__link:hover .clients__icon,
 .clients__link:focus .clients__icon {
-  fill: var(--accent-color);
+  fill: var($accent-color);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
