--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -6,13 +6,13 @@
 
 .contacts-header__link:hover,
 .contacts-header__link:focus {
-  color: var($accent-color);
+  color: $accent-color;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-header__link:hover .header-contacts-icon,
 .contacts-header__link:focus .header-contacts-icon {
-  fill: var($accent-color);
+  fill: $accent-color;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -30,7 +30,7 @@
   letter-spacing: 0.02em;
   text-decoration: none;
 
-  color: var($primary-color-text);
+  color: $primary-color-text;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -45,8 +45,8 @@
 
 .contact-footer__adress:hover,
 .contact-footer__adress:focus {
-  background-color: var($color-bg-promo-footer);
-  color: var($accent-color);
+  background-color: $color-bg-promo-footer;
+  color: $accent-color;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -54,14 +54,14 @@
   text-decoration: none;
   font-style: normal;
   line-height: 1.71;
-  color: var($footer-primary-text-color);
+  color: $footer-primary-text-color;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-footer__link:hover,
 .contact-footer__link:focus {
-  background-color: var($color-bg-promo-footer);
-  color: var($accent-color);
+  background-color: $color-bg-promo-footer;
+  color: $accent-color;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -69,7 +69,7 @@
   margin-bottom: 9px;
 
   line-height: 1.71;
-  color: var($color-link-contacts);
+  color: $color-link-contacts;
   font-style: normal;
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
