--- a/sass/components/_portfolio-main.scss
+++ b/sass/components/_portfolio-main.scss
@@ -9,7 +9,7 @@
   gap: 8px;
   justify-content: center;
 
-  color: var($color-nav);
+  color: $color-nav;
   cursor: pointer;
 }
 
@@ -29,7 +29,7 @@
 
 .site-filters__button:hover,
 .site-filters__button:focus {
-  background-color: var($accent-color);
+  background-color: $accent-color;
   color: #ffffff;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -50,7 +50,7 @@
   line-height: 1.63;
   font-family: inherit;
   background-color: #f5f4f4;
-  color: var($color-nav);
+  color: $color-nav;
   border-color: transparent;
   border: none;
   border-radius: 4px;
@@ -143,11 +143,11 @@
   line-height: 2;
   letter-spacing: 0.06em;
   margin-bottom: 4px;
-  color: var($primary-color-title);
+  color: $primary-color-title;
 }
 
 .card-set__text {
   font-size: 16px;
   line-height: 1.88;
-  color: var($primary-color-text);
+  color: $primary-color-text;
 }
