--- a/sass/components/_site-menu.scss
+++ b/sass/components/_site-menu.scss
@@ -18,12 +18,12 @@
   width: 100%;
   height: 4px;
   border-radius: 2px;
-  background-color: var($accent-color);
+  background-color: $accent-color;
 }
 
 .site-menu__link:hover,
 .site-menu__link:focus {
-  color: var($accent-color);
+  color: $accent-color;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -38,7 +38,7 @@
   line-height: 1.14;
   letter-spacing: 0.02em;
 
-  color: var($color-nav);
+  color: $color-nav;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -51,5 +51,5 @@
 }
 
 .site-menu--current {
-  color: var($accent-color);
+  color: $accent-color;
 }
