--- a/sass/components/_studio-main.scss
+++ b/sass/components/_studio-main.scss
@@ -3,7 +3,7 @@
   padding-bottom: 200px;
   margin: 0 auto;
 
-  background-color: var($color-bg-promo-footer);
+  background-color: $color-bg-promo-footer;
   background-image: url(../images/promo-bg.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -28,7 +28,7 @@
   line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  color: var(--color-text-promo);
+  color: $color-text-promo;
 }
 
 .features__wrapper {
@@ -51,8 +51,8 @@
   width: 270px;
   height: 120px;
 
-  background-color: var($color-bg-hero);
-  border: 1px solid var($color-bg-hero);
+  background-color: $color-bg-hero;
+  border: 1px solid $color-bg-hero;
   border-radius: 4px;
 
   display: flex;
@@ -73,7 +73,7 @@
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
-  color: var($primary-color-title);
+  color: $primary-color-title;
 }
 
 .features__text {
@@ -112,7 +112,7 @@
   line-height: 1.17;
   text-align: center;
 
-  color: var($primary-color-title);
+  color: $primary-color-title;
 }
 
 .galery__box {
@@ -140,7 +140,7 @@
 
 .hero__wrapper {
   padding: 94px 0;
-  background-color: var($color-bg-hero);
+  background-color: $color-bg-hero;
 }
 
 .hero__title {
@@ -150,7 +150,7 @@
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
-  color: var(--primary-color-title);
+  color: $primary-color-title;
 }
 
 .hero__box {
@@ -169,7 +169,7 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 
-  background-color: var($primary-color-bacground);
+  background-color: $primary-color-bacground;
 }
 
 .hero-meta__icon {
@@ -183,7 +183,7 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
-  color: var($primary-color-title);
+  color: $primary-color-title;
 }
 
 .hero-meta__text {
@@ -211,24 +211,24 @@
 
 .socials__link:hover,
 .socials__link:focus {
-  background-color: var($accent-color);
+  background-color: $accent-color;
   border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .socials__link:hover .socials__icon,
 .socials__link:focus .socials__icon {
-  fill: var($secondary-color-socials);
+  fill: $secondary-color-socials;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .socials__icon {
-  fill: var($primary-color-socials-clients);
+  fill: $primary-color-socials-clients;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients__wrapper {
-  border-color: var($primary-color-bacground);
+  border-color: $primary-color-bacground;
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -240,7 +240,7 @@
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
-  color: var($primary-color-title);
+  color: $primary-color-title;
 }
 
 .clients__box {
@@ -253,7 +253,7 @@
 
 .clients__meta:hover,
 .clients__meta:focus {
-  border-color: var($accent-color);
+  border-color: $accent-color;
 }
 
 .clients__link {
@@ -271,20 +271,20 @@
 
 .clients__link:hover,
 .clients__link:focus {
-  border-color: var($accent-color);
+  border-color: $accent-color;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients__icon {
-  border-color: var($accent-color);
+  border-color: $accent-color;
   width: 106px;
   height: 60px;
-  fill: var($primary-color-socials-clients);
+  fill: $primary-color-socials-clients;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients__link:hover .clients__icon,
 .clients__link:focus .clients__icon {
-  fill: var($accent-color);
+  fill: $accent-color;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
