--- a/css/main.css
+++ b/css/main.css
@@ -33,12 +33,12 @@
   width: 100%;
   height: 4px;
   border-radius: 2px;
-  background-color: var(#2196f3);
+  background-color: #2196f3;
 }
 
 .site-menu__link:hover,
 .site-menu__link:focus {
-  color: var(#2196f3);
+  color: #2196f3;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -52,7 +52,7 @@
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  color: var(#212121);
+  color: #212121;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -66,7 +66,7 @@
 }
 
 .site-menu--current {
-  color: var(#2196f3);
+  color: #2196f3;
 }
 
 .logo__link {
@@ -75,11 +75,11 @@
   font-size: 26px;
   line-height: 1.19;
   text-decoration: none;
-  color: var(#000000);
+  color: #000000;
 }
 
 .logo__item {
-  color: var(#2196f3);
+  color: #2196f3;
 }
 
 .logo__header {
@@ -97,7 +97,7 @@
 .logo__footer {
   display: inline-block;
   text-decoration: none;
-  color: var(#ffffff);
+  color: #ffffff;
   margin-right: 0px;
   margin-bottom: 20px;
 }
@@ -112,14 +112,14 @@
 
 .contacts-header__link:hover,
 .contacts-header__link:focus {
-  color: var(#2196f3);
+  color: #2196f3;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-header__link:hover .header-contacts-icon,
 .contacts-header__link:focus .header-contacts-icon {
-  fill: var(#2196f3);
+  fill: #2196f3;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -142,7 +142,7 @@
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
-  color: var(#757575);
+  color: #757575;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -158,8 +158,8 @@
 
 .contact-footer__adress:hover,
 .contact-footer__adress:focus {
-  background-color: var(#2f303a);
-  color: var(#2196f3);
+  background-color: #2f303a;
+  color: #2196f3;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -168,15 +168,15 @@
   text-decoration: none;
   font-style: normal;
   line-height: 1.71;
-  color: var(#ffffff);
+  color: #ffffff;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-footer__link:hover,
 .contact-footer__link:focus {
-  background-color: var(#2f303a);
-  color: var(#2196f3);
+  background-color: #2f303a;
+  color: #2196f3;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -184,7 +184,7 @@
 .contact-footer__link {
   margin-bottom: 9px;
   line-height: 1.71;
-  color: var(rgba(255, 255, 255, 0.6));
+  color: rgba(255, 255, 255, 0.6);
   font-style: normal;
   text-decoration: none;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -200,8 +200,8 @@
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
-  background-color: var(#2196f3);
-  color: var(#ffffff);
+  background-color: #2196f3;
+  color: #ffffff;
   border-color: transparent;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -210,8 +210,8 @@
 
 .promo__button:hover,
 .promo__button:focus {
-  background-color: var(#188ce8);
-  color: var(#ffffff);
+  background-color: #188ce8;
+  color: #ffffff;
 }
 
 .footer-button__btn {
@@ -233,7 +233,7 @@
   text-align: center;
   letter-spacing: 0.06em;
   color: #ffffff;
-  background: var(#2196f3);
+  background: #2196f3;
   border-radius: 4px;
   border-color: transparent;
   cursor: pointer;
@@ -245,7 +245,7 @@
 
 .footer-button__btn:hover,
 .footer-button__btn:focus {
-  background-color: var(#188ce8);
+  background-color: #188ce8;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -258,7 +258,7 @@
   padding-top: 200px;
   padding-bottom: 200px;
   margin: 0 auto;
-  background-color: var(#2f303a);
+  background-color: #2f303a;
   background-image: url(../images/promo-bg.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -282,7 +282,7 @@
   line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  color: var(--color-text-promo);
+  color: #ffffff;
 }
 
 .features__wrapper {
@@ -308,8 +308,8 @@
 .features__box {
   width: 270px;
   height: 120px;
-  background-color: var(#f5f4fa);
-  border: 1px solid var(#f5f4fa);
+  background-color: #f5f4fa;
+  border: 1px solid #f5f4fa;
   border-radius: 4px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -334,7 +334,7 @@
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
-  color: var(#212121);
+  color: #212121;
 }
 
 .features__text {
@@ -373,7 +373,7 @@
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
-  color: var(#212121);
+  color: #212121;
 }
 
 .galery__box {
@@ -405,7 +405,7 @@
 
 .hero__wrapper {
   padding: 94px 0;
-  background-color: var(#f5f4fa);
+  background-color: #f5f4fa;
 }
 
 .hero__title {
@@ -414,7 +414,7 @@
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
-  color: var(--primary-color-title);
+  color: #212121;
 }
 
 .hero__box {
@@ -437,7 +437,7 @@
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  background-color: var(#ffffff);
+  background-color: #ffffff;
 }
 
 .hero-meta__icon {
@@ -450,7 +450,7 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
-  color: var(#212121);
+  color: #212121;
 }
 
 .hero-meta__text {
@@ -489,7 +489,7 @@
 
 .socials__link:hover,
 .socials__link:focus {
-  background-color: var(--accent-color);
+  background-color: #2196f3;
   border-radius: 50%;
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -497,19 +497,19 @@
 
 .socials__link:hover .socials__icon,
 .socials__link:focus .socials__icon {
-  fill: var(--secondary-color-socials);
+  fill: #ffffff;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .socials__icon {
-  fill: var(--primary-color-socials-clients);
+  fill: #afb1b8;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients__wrapper {
-  border-color: var(--primary-color-bacground);
+  border-color: #ffffff;
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -520,7 +520,7 @@
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
-  color: var(--primary-color-title);
+  color: #212121;
 }
 
 .clients__box {
@@ -538,7 +538,7 @@
 
 .clients__meta:hover,
 .clients__meta:focus {
-  border-color: var(--accent-color);
+  border-color: #2196f3;
 }
 
 .clients__link {
@@ -562,24 +562,23 @@
 
 .clients__link:hover,
 .clients__link:focus {
-  border-color: var(--accent-color);
-  /* fill: var(--accent-color); */
+  border-color: #2196f3;
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients__icon {
-  border-color: var(--accent-color);
+  border-color: #2196f3;
   width: 106px;
   height: 60px;
-  fill: var(--primary-color-socials-clients);
+  fill: #afb1b8;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients__link:hover .clients__icon,
 .clients__link:focus .clients__icon {
-  fill: var(--accent-color);
+  fill: #2196f3;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -598,7 +597,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  color: var(#212121);
+  color: #212121;
   cursor: pointer;
 }
 
@@ -618,7 +617,7 @@
 
 .site-filters__button:hover,
 .site-filters__button:focus {
-  background-color: var(#2196f3);
+  background-color: #2196f3;
   color: #ffffff;
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -642,7 +641,7 @@
   line-height: 1.63;
   font-family: inherit;
   background-color: #f5f4f4;
-  color: var(#212121);
+  color: #212121;
   border-color: transparent;
   border: none;
   border-radius: 4px;
@@ -745,18 +744,18 @@
   line-height: 2;
   letter-spacing: 0.06em;
   margin-bottom: 4px;
-  color: var(#212121);
+  color: #212121;
 }
 
 .card-set__text {
   font-size: 16px;
   line-height: 1.88;
-  color: var(#757575);
+  color: #757575;
 }
 
 .peage-footer__wrapper {
   padding: 60px 0;
-  background-color: var(#2f303a);
+  background-color: #2f303a;
 }
 
 .peage-footer__container {
@@ -777,7 +776,7 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
   margin-bottom: 20px;
-  color: var(#ffffff);
+  color: #ffffff;
 }
 
 .socials-footer__box {
@@ -808,7 +807,7 @@
 
 .socials-footer__link:hover,
 .socials-footer__link:focus {
-  background-color: var(--accent-color);
+  background-color: #2196f3;
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -816,7 +815,52 @@
 .socials-footer__icon {
   width: 20px;
   height: 20px;
-  fill: var(--secondary-color-socials);
+  fill: #ffffff;
+}
+
+.mailing-footer__title {
+  font-family: "Roboto" sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  color: #ffffff;
+}
+
+.mailing-footer__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.mailing-footer__row {
+  width: 358px;
+  height: 50px;
+}
+
+.mailing-footer__input {
+  width: 358px;
+  height: 50px;
+  margin: 0;
+  padding: 15px 16px;
+  background-color: #2f303a;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+          filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mailing-footer__input:hover,
+.mailing-footer__input:focus {
+  color: #ffffff;
+  border-color: #2196f3;
+  outline: none;
+  -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop {
@@ -880,7 +924,7 @@
 
 .modal-btn:hover,
 .modal-btn:focus {
-  fill: var(--accent-color);
+  fill: #2196f3;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -910,7 +954,7 @@
           align-items: center;
   letter-spacing: 0.03em;
   text-align: center;
-  color: var(--primary-color-title);
+  color: #212121;
 }
 
 .modal-group-form {
@@ -935,7 +979,7 @@
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
-  color: var(--primary-color-text);
+  color: #757575;
 }
 
 .form-field input {
@@ -960,7 +1004,7 @@
 
 .form-input:hover,
 .form-input:focus {
-  border: 1px solid var(--accent-color);
+  border: 1px solid #2196f3;
   outline: none;
   -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -968,7 +1012,7 @@
 
 .form-input:hover ~ .form-icon,
 .form-input:focus ~ .form-icon {
-  fill: var(--accent-color);
+  fill: #2196f3;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -995,7 +1039,7 @@
 
 .form-comment:hover,
 .form-comment:focus {
-  border: 1px solid var(--accent-color);
+  border: 1px solid #2196f3;
   outline: none;
   -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1026,8 +1070,8 @@
 }
 
 .checkbox-input:checked + .checkbox-icon {
-  border-color: var(--accent-color);
-  background-color: var(--accent-color);
+  border-color: #2196f3;
+  background-color: #2196f3;
   background-image: url(../images/icon\ check.svg);
   background-size: contain;
   background-origin: border-box;
@@ -1040,7 +1084,7 @@
 }
 
 .modal-form-link {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .checkbox-icon {
@@ -1073,7 +1117,7 @@
   text-align: center;
   letter-spacing: 0.06em;
   color: #ffffff;
-  background-color: var(--accent-color);
+  background-color: #2196f3;
   border-radius: 4px;
   border-color: transparent;
   cursor: pointer;
@@ -1098,8 +1142,8 @@ body {
   font-family: "Roboto", sans-serif;
   font-size: 14px;
   letter-spacing: 0.03em;
-  background-color: var(--primary-color-bacground);
-  color: var(--primary-color-text);
+  background-color: #ffffff;
+  color: #757575;
 }
 
 p,
