--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -10,7 +10,7 @@
   letter-spacing: 0.06em;
 
   background-color: $accent-color;
-  color: var($color-text-promo);
+  color: $color-text-promo;
   border-color: transparent;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   cursor: pointer;
