--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -12,3 +12,4 @@ $primary-color-socials-clients: #afb1b8;
 $socials-secondary-color: #ffffff;
 $footer-primary-text-color: #ffffff;
 $buttom-secondary-color: #188ce8;
+$secondary-color-socials: #ffffff;
