--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,6 +1,9 @@
+.page-header {
+  border-bottom: 1px solid #ececec;
+}
+
 .page-header__box {
   display: flex;
-  border-bottom: 1px solid #ececec;
 }
 
 .page-header__nav {
